# Report-card

./: .dockerignore  backend.Dockerfile  docker-compose.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json
.github/workflows/: prod.yaml
backend/: Cargo.toml  README.md
backend/data/: NZ_VLM_final_May24.csv  tide-stations.csv
backend/src/: config.rs  data.rs  elevation.rs  main.rs  rise_model.rs  routes.rs  street_search.rs  tide_datasource.rs  vlm_estimator.rs
src/: About.tsx  App.tsx  Results.tsx  index.css  main.tsx
src/components/: AddressSelector.tsx  DataGraph.tsx  Footer.tsx  Map.tsx  Select.tsx
src/lib/: climate_model.ts  elevation-api.ts  rand_gen.ts
