[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
csv = "1.3.0"
dotenv = "0.15.0"
geo = "0.28.0"
log = "0.4.22"
num-rational = { version = "0.4.2", features = ["serde"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "macos-system-configuration"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
